--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -38,8 +38,10 @@ dependencies {
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.3'
     compile 'com.squareup:otto:1.3.6'
     compile 'com.facebook.fresco:fresco:0.1.0+'
+    compile 'com.github.shell-software:fab:1.0.5'
+    compile 'com.github.rahatarmanahmed:circularprogressview:2.0.1'
+
     compile 'org.roboguice:roboguice:3.+'
     provided 'org.roboguice:roboblender:3.+'
-
 
 }
